[package]
authors = ['Logion Team <https://github.com/logion-network>']
description = 'Implements logion shared components.'
edition = '2021'
homepage = 'https://logion.network'
license = 'Apache-2.0'
name = 'logion-shared'
readme = 'README.md'
repository = 'https://github.com/logion-network/logion-shared'
version = '0.1.1'
keywords = ['logion']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.31" }

[features]
default = ['std']
std = [
    'frame-support/std',
    'sp-std/std',
]
